// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email authenticator verification when email magic link = undefined renders correct form renders the initial form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
          <div
            aria-hidden="true"
            class="iconContainer mfa-okta-email authCoinOverlay MuiBox-root emotion-5"
            data-se="factor-beacon"
          >
            <svg
              aria-labelledby="mfa-okta-email"
              fill="none"
              height="48"
              role="img"
              viewBox="0 0 48 48"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="mfa-okta-email"
              >
                Email Authentication
              </title>
              <circle
                class="siwFillBg"
                cx="24"
                cy="24"
                fill="#F5F5F6"
                r="24"
              />
              <path
                class="siwFillSecondary"
                d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                fill="#A7B5EC"
              />
              <path
                class="siwFillPrimary"
                d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                fill="#00297A"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-6"
        >
          <div
            class="identifier-container MuiBox-root emotion-7"
          >
            <div
              class="identifierContainer MuiBox-root emotion-8"
            >
              <span
                class="userIconContainer MuiBox-root emotion-9"
              >
                <svg
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-10"
                  fill="none"
                  focusable="false"
                  role="img"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <title>
                    User
                  </title>
                </svg>
              </span>
              <span
                class="identifier no-translate identifierSpan MuiBox-root emotion-9"
                data-se="identifier"
                title="firstname.lastname@example.com"
              >
                firstname.lastname@example.com
              </span>
            </div>
          </div>
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-12"
            >
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-14"
                />
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-17"
                      data-se="o-form-head"
                      id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_3_1"
                    >
                      Verify with your email
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-20"
                      data-se="o-form-explain"
                      id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_4_1"
                    >
                      We sent an email to 
                      <span
                        class="strong no-translate"
                      >
                        f****************e@example.com
                      </span>
                      . Click the verification link in your email to continue or enter the code below.
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <button
                    aria-describedby="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_3_1 challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_4_1"
                    class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-22"
                    tabindex="0"
                    type="button"
                  >
                    Enter a code from the email instead
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-14"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-24"
                  data-se="cancel"
                  href="javascript:void(0)"
                >
                  Back to sign in
                </a>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined renders correct form renders the initial form with resend alert box 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
          <div
            aria-hidden="true"
            class="iconContainer mfa-okta-email authCoinOverlay MuiBox-root emotion-5"
            data-se="factor-beacon"
          >
            <svg
              aria-labelledby="mfa-okta-email"
              fill="none"
              height="48"
              role="img"
              viewBox="0 0 48 48"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="mfa-okta-email"
              >
                Email Authentication
              </title>
              <circle
                class="siwFillBg"
                cx="24"
                cy="24"
                fill="#F5F5F6"
                r="24"
              />
              <path
                class="siwFillSecondary"
                d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                fill="#A7B5EC"
              />
              <path
                class="siwFillPrimary"
                d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                fill="#00297A"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-6"
        >
          <div
            class="identifier-container MuiBox-root emotion-7"
          >
            <div
              class="identifierContainer MuiBox-root emotion-8"
            >
              <span
                class="userIconContainer MuiBox-root emotion-9"
              >
                <svg
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-10"
                  fill="none"
                  focusable="false"
                  role="img"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <title>
                    User
                  </title>
                </svg>
              </span>
              <span
                class="identifier no-translate identifierSpan MuiBox-root emotion-9"
                data-se="identifier"
                title="firstname.lastname@example.com"
              >
                firstname.lastname@example.com
              </span>
            </div>
          </div>
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-12"
            >
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-14"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxWarning MuiAlert-infobox emotion-16"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-17"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-18"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-19"
                      >
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          Haven't received an email?
                        </div>
                        <a
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-21"
                          href="javascript:void(0);"
                        >
                          Send again
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-23"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-24"
                      data-se="o-form-head"
                      id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_3_1"
                    >
                      Verify with your email
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-23"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-27"
                      data-se="o-form-explain"
                      id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_4_1"
                    >
                      We sent an email to 
                      <span
                        class="strong no-translate"
                      >
                        f****************e@example.com
                      </span>
                      . Click the verification link in your email to continue or enter the code below.
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <button
                    aria-describedby="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_3_1 challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_4_1"
                    class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth Mui-focusVisible MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-29"
                    tabindex="0"
                    type="button"
                  >
                    Enter a code from the email instead
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-14"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-31"
                  data-se="cancel"
                  href="javascript:void(0)"
                >
                  Back to sign in
                </a>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined renders correct form renders the otp challenge form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
          <div
            aria-hidden="true"
            class="iconContainer mfa-okta-email authCoinOverlay MuiBox-root emotion-5"
            data-se="factor-beacon"
          >
            <svg
              aria-labelledby="mfa-okta-email"
              fill="none"
              height="48"
              role="img"
              viewBox="0 0 48 48"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="mfa-okta-email"
              >
                Email Authentication
              </title>
              <circle
                class="siwFillBg"
                cx="24"
                cy="24"
                fill="#F5F5F6"
                r="24"
              />
              <path
                class="siwFillSecondary"
                d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                fill="#A7B5EC"
              />
              <path
                class="siwFillPrimary"
                d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                fill="#00297A"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-6"
        >
          <div
            class="identifier-container MuiBox-root emotion-7"
          >
            <div
              class="identifierContainer MuiBox-root emotion-8"
            >
              <span
                class="userIconContainer MuiBox-root emotion-9"
              >
                <svg
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-10"
                  fill="none"
                  focusable="false"
                  role="img"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <title>
                    User
                  </title>
                </svg>
              </span>
              <span
                class="identifier no-translate identifierSpan MuiBox-root emotion-9"
                data-se="identifier"
                title="firstname.lastname@example.com"
              >
                firstname.lastname@example.com
              </span>
            </div>
          </div>
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-12"
            >
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-14"
                />
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-17"
                      data-se="o-form-head"
                      id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_7_2"
                    >
                      Verify with your email
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-20"
                      data-se="o-form-explain"
                      id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_8_2"
                    >
                      We sent an email to 
                      <span
                        class="strong no-translate"
                      >
                        f****************e@example.com
                      </span>
                      . Click the verification link in your email to continue or enter the code below.
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                      for="credentials.passcode"
                    >
                      Enter Code
                    </label>
                    <div
                      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused emotion-24"
                      required="true"
                    >
                      <input
                        aria-describedby="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_7_2 challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_8_2"
                        aria-invalid="false"
                        autocomplete="off"
                        class="MuiInputBase-input emotion-25"
                        data-se="credentials.passcode"
                        id="credentials.passcode"
                        inputmode="numeric"
                        name="credentials.passcode"
                        required=""
                        type="text"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <button
                    aria-describedby="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_7_2 challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_8_2"
                    class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-27"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Verify
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-14"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-29"
                  data-se="cancel"
                  href="javascript:void(0)"
                >
                  Back to sign in
                </a>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined renders correct form renders the otp challenge form 2`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
          <div
            aria-hidden="true"
            class="iconContainer mfa-okta-email authCoinOverlay MuiBox-root emotion-5"
            data-se="factor-beacon"
          >
            <svg
              aria-labelledby="mfa-okta-email"
              fill="none"
              height="48"
              role="img"
              viewBox="0 0 48 48"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="mfa-okta-email"
              >
                Email Authentication
              </title>
              <circle
                class="siwFillBg"
                cx="24"
                cy="24"
                fill="#F5F5F6"
                r="24"
              />
              <path
                class="siwFillSecondary"
                d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                fill="#A7B5EC"
              />
              <path
                class="siwFillPrimary"
                d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                fill="#00297A"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-6"
        >
          <div
            class="identifier-container MuiBox-root emotion-7"
          >
            <div
              class="identifierContainer MuiBox-root emotion-8"
            >
              <span
                class="userIconContainer MuiBox-root emotion-9"
              >
                <svg
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-10"
                  fill="none"
                  focusable="false"
                  role="img"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <title>
                    User
                  </title>
                </svg>
              </span>
              <span
                class="identifier no-translate identifierSpan MuiBox-root emotion-9"
                data-se="identifier"
                title="testUser@okta.com"
              >
                testUser@okta.com
              </span>
            </div>
          </div>
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-12"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-13"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-14"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-15"
                    fill="none"
                    focusable="false"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-16"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root emotion-17"
            >
              <div
                class="MuiBox-root emotion-17"
              >
                <div
                  class="MuiBox-root emotion-19"
                />
                <div
                  class="MuiBox-root emotion-19"
                >
                  <div
                    class="MuiBox-root emotion-21"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-22"
                      data-se="o-form-head"
                      id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eaexdyjzXZ3iWikza0g3_7_2"
                    >
                      Verify with your email
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-19"
                >
                  <div
                    class="MuiBox-root emotion-21"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-25"
                      data-se="o-form-explain"
                      id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>t***t@idxcom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eaexdyjzXZ3iWikza0g3_8_2"
                    >
                      We sent an email to 
                      <span
                        class="strong no-translate"
                      >
                        t***t@idx.com
                      </span>
                      . Click the verification link in your email to continue or enter the code below.
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-19"
                >
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-28"
                      for="credentials.passcode"
                    >
                      Enter Code
                    </label>
                    <div
                      class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-29"
                      required="true"
                    >
                      <input
                        aria-describedby=" credentials.passcode-error challenge-authenticator_Title_Verify_with_your_email_okta_email_eaexdyjzXZ3iWikza0g3_7_2 challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>t***t@idxcom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eaexdyjzXZ3iWikza0g3_8_2 "
                        aria-invalid="true"
                        autocomplete="off"
                        class="MuiInputBase-input emotion-30"
                        data-se="credentials.passcode"
                        id="credentials.passcode"
                        inputmode="numeric"
                        name="credentials.passcode"
                        required=""
                        type="text"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <p
                        class="MuiFormHelperText-root Mui-error emotion-32"
                        data-se="credentials.passcode-error"
                        id="credentials.passcode-error"
                        role="alert"
                      >
                        Invalid code. Try again.
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-19"
                >
                  <button
                    aria-describedby="challenge-authenticator_Title_Verify_with_your_email_okta_email_eaexdyjzXZ3iWikza0g3_7_2 challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>t***t@idxcom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eaexdyjzXZ3iWikza0g3_8_2"
                    class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-34"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Verify
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-19"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-36"
                  data-se="switchAuthenticator"
                  href="javascript:void(0)"
                >
                  Verify with something else
                </a>
              </div>
              <div
                class="MuiBox-root emotion-19"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-36"
                  data-se="cancel"
                  href="javascript:void(0)"
                >
                  Back to sign in
                </a>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined renders correct form should display reminder prompt, then global error after invalid entry and finally display reminder again with global error 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
          <div
            aria-hidden="true"
            class="iconContainer mfa-okta-email authCoinOverlay MuiBox-root emotion-5"
            data-se="factor-beacon"
          >
            <svg
              aria-labelledby="mfa-okta-email"
              fill="none"
              height="48"
              role="img"
              viewBox="0 0 48 48"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="mfa-okta-email"
              >
                Email Authentication
              </title>
              <circle
                class="siwFillBg"
                cx="24"
                cy="24"
                fill="#F5F5F6"
                r="24"
              />
              <path
                class="siwFillSecondary"
                d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                fill="#A7B5EC"
              />
              <path
                class="siwFillPrimary"
                d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                fill="#00297A"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-6"
        >
          <div
            class="identifier-container MuiBox-root emotion-7"
          >
            <div
              class="identifierContainer MuiBox-root emotion-8"
            >
              <span
                class="userIconContainer MuiBox-root emotion-9"
              >
                <svg
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-10"
                  fill="none"
                  focusable="false"
                  role="img"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <title>
                    User
                  </title>
                </svg>
              </span>
              <span
                class="identifier no-translate identifierSpan MuiBox-root emotion-9"
                data-se="identifier"
                title="testUser@okta.com"
              >
                testUser@okta.com
              </span>
            </div>
          </div>
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-12"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-13"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-14"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-15"
                    fill="none"
                    focusable="false"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-16"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root emotion-17"
            >
              <div
                class="MuiBox-root emotion-17"
              >
                <div
                  class="MuiBox-root emotion-19"
                >
                  <div
                    class="MuiBox-root emotion-19"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxWarning MuiAlert-infobox emotion-21"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-22"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-15"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-16"
                      >
                        <div
                          class="MuiBox-root emotion-25"
                        >
                          Haven't received an email?
                        </div>
                        <a
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-26"
                          href="javascript:void(0);"
                        >
                          Send again
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-19"
                >
                  <div
                    class="MuiBox-root emotion-28"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-29"
                      data-se="o-form-head"
                      id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eaexdyjzXZ3iWikza0g3_7_2"
                    >
                      Verify with your email
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-19"
                >
                  <div
                    class="MuiBox-root emotion-28"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-32"
                      data-se="o-form-explain"
                      id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>t***t@idxcom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eaexdyjzXZ3iWikza0g3_8_2"
                    >
                      We sent an email to 
                      <span
                        class="strong no-translate"
                      >
                        t***t@idx.com
                      </span>
                      . Click the verification link in your email to continue or enter the code below.
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-19"
                >
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-35"
                      for="credentials.passcode"
                    >
                      Enter Code
                    </label>
                    <div
                      class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-36"
                      required="true"
                    >
                      <input
                        aria-describedby=" credentials.passcode-error challenge-authenticator_Title_Verify_with_your_email_okta_email_eaexdyjzXZ3iWikza0g3_7_2 challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>t***t@idxcom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eaexdyjzXZ3iWikza0g3_8_2 "
                        aria-invalid="true"
                        autocomplete="off"
                        class="MuiInputBase-input emotion-37"
                        data-se="credentials.passcode"
                        id="credentials.passcode"
                        inputmode="numeric"
                        name="credentials.passcode"
                        required=""
                        type="text"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <p
                        class="MuiFormHelperText-root Mui-error emotion-39"
                        data-se="credentials.passcode-error"
                        id="credentials.passcode-error"
                        role="alert"
                      >
                        Invalid code. Try again.
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-19"
                >
                  <button
                    aria-describedby="challenge-authenticator_Title_Verify_with_your_email_okta_email_eaexdyjzXZ3iWikza0g3_7_2 challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>t***t@idxcom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eaexdyjzXZ3iWikza0g3_8_2"
                    class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-41"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Verify
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-19"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                  data-se="switchAuthenticator"
                  href="javascript:void(0)"
                >
                  Verify with something else
                </a>
              </div>
              <div
                class="MuiBox-root emotion-19"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                  data-se="cancel"
                  href="javascript:void(0)"
                >
                  Back to sign in
                </a>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined renders correct form should render session expired terminal view when polling results in expired session 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
        </div>
        <div
          class="MuiBox-root emotion-5"
        >
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-8"
                  data-se="message"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox infobox-error emotion-9"
                    data-se="callout"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-10"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-11"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-12"
                    >
                      You have been logged out due to inactivity. Refresh or return to the sign in screen.
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-14"
                  data-se="cancel"
                  href="javascript:void(0)"
                >
                  Back to sign in
                </a>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined should have autocomplete attribute on otp input element when in ios browser 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
          <div
            aria-hidden="true"
            class="iconContainer mfa-okta-email authCoinOverlay MuiBox-root emotion-5"
            data-se="factor-beacon"
          >
            <svg
              aria-labelledby="mfa-okta-email"
              fill="none"
              height="48"
              role="img"
              viewBox="0 0 48 48"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="mfa-okta-email"
              >
                Email Authentication
              </title>
              <circle
                class="siwFillBg"
                cx="24"
                cy="24"
                fill="#F5F5F6"
                r="24"
              />
              <path
                class="siwFillSecondary"
                d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                fill="#A7B5EC"
              />
              <path
                class="siwFillPrimary"
                d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                fill="#00297A"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-6"
        >
          <div
            class="identifier-container MuiBox-root emotion-7"
          >
            <div
              class="identifierContainer MuiBox-root emotion-8"
            >
              <span
                class="userIconContainer MuiBox-root emotion-9"
              >
                <svg
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-10"
                  fill="none"
                  focusable="false"
                  role="img"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <title>
                    User
                  </title>
                </svg>
              </span>
              <span
                class="identifier no-translate identifierSpan MuiBox-root emotion-9"
                data-se="identifier"
                title="firstname.lastname@example.com"
              >
                firstname.lastname@example.com
              </span>
            </div>
          </div>
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-12"
            >
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-14"
                />
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-17"
                      data-se="o-form-head"
                      id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_7_2"
                    >
                      Verify with your email
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-20"
                      data-se="o-form-explain"
                      id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_8_2"
                    >
                      We sent an email to 
                      <span
                        class="strong no-translate"
                      >
                        f****************e@example.com
                      </span>
                      . Click the verification link in your email to continue or enter the code below.
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                      for="credentials.passcode"
                    >
                      Enter Code
                    </label>
                    <div
                      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused emotion-24"
                      required="true"
                    >
                      <input
                        aria-describedby="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_7_2 challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_8_2"
                        aria-invalid="false"
                        autocomplete="one-time-code"
                        class="MuiInputBase-input emotion-25"
                        data-se="credentials.passcode"
                        id="credentials.passcode"
                        inputmode="numeric"
                        name="credentials.passcode"
                        required=""
                        type="text"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <button
                    aria-describedby="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_7_2 challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_8_2"
                    class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-27"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Verify
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-14"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-29"
                  data-se="cancel"
                  href="javascript:void(0)"
                >
                  Back to sign in
                </a>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;
